<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/colorPrimary">


    <LinearLayout
        android:id="@+id/mainLayout"
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="128dp"
        android:layout_marginEnd="64dp"
        android:layout_marginRight="64dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/oneAndTwoLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@android:dimen/app_icon_size"
            android:orientation="horizontal"
            android:layout_marginStart="48dp"
            android:layout_marginEnd="48dp">

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="32sp"
                android:text="@string/x1"
                android:textAlignment="center"
                android:background="@drawable/custom_button1"
                android:textColor="@color/colorTextIcons"
                android:onClick="onClick"/>

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/x2"
                android:textSize="32sp"
                android:textAlignment="center"
                android:background="@drawable/custom_button"
                android:textColor="@color/colorTextIcons"
                android:onClick="onClick"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/threeAndFourLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@android:dimen/app_icon_size"
            android:orientation="horizontal"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginEnd="48dp"
            android:layout_marginRight="48dp">

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="32sp"
                android:text="@string/x3"
                android:background="@drawable/custom_button"
                android:textColor="@color/colorTextIcons"
                android:onClick="onClick"/>

            <Button
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="32sp"
                android:text="@string/x4"
                android:background="@drawable/custom_button1"
                android:textColor="@color/colorTextIcons"
                android:onClick="onClick"/>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>