<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Times1Activity"
    android:background="@color/colorPrimary">
    <Button
        android:id="@+id/goButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/start"
        android:textSize="48dp"
        android:background="@color/colorDivider"
        android:onClick="onClickStart">

    </Button>

    <LinearLayout
        android:visibility="gone"
        android:id="@+id/topPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/bottomPanel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/resultTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/correct"
                android:textAlignment="center"
                android:textColor="@color/colorTextIcons"
                android:textSize="48sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/multiply"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@android:dimen/app_icon_size"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tabla2TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorAccent"
                android:text="@string/tabla1"
                android:textAlignment="center"
                android:textColor="@color/colorTextIcons"
                android:textSize="40sp" />

            <TextView
                android:id="@+id/timesTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorTextBlack"
                android:text="@string/times"
                android:textAlignment="center"
                android:textColor="@color/colorTextIcons"
                android:textSize="40sp" />

            <TextView
                android:id="@+id/multiplyTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorAccent"
                android:text=""
                android:textAlignment="center"
                android:textColor="@color/colorTextIcons"
                android:textSize="40sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:visibility="gone"
        android:id="@+id/bottomPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topPanel">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                style="@style/Widget.AppCompat.Button.Borderless"
                android:id="@+id/button1"
                android:tag="0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text=""
                android:background="@drawable/custom_button"
                android:textColor="@color/colorTextIcons"
                android:textSize="48sp"
                android:onClick="chooseAnswer"
                />

            <Button
                style="@style/Widget.AppCompat.Button.Borderless"
                android:id="@+id/button2"
                android:tag="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text=""
                android:background="@drawable/custom_button1"
                android:textColor="@color/colorTextIcons"
                android:textSize="48sp"
                android:onClick="chooseAnswer"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                style="@style/Widget.AppCompat.Button.Borderless"
                android:id="@+id/button3"
                android:tag="2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text=""
                android:background="@drawable/custom_button1"
                android:textColor="@color/colorTextIcons"
                android:textSize="48sp"
                android:onClick="chooseAnswer"/>

            <Button
                style="@style/Widget.AppCompat.Button.Borderless"
                android:id="@+id/button4"
                android:tag="3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text=""
                android:background="@drawable/custom_button"
                android:textColor="@color/colorTextIcons"
                android:textSize="48sp"
                android:onClick="chooseAnswer"/>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>